# tua-hackathon

./: .env  README.md  benchmark.py  main.py  pyproject.toml
inferances/: baseline.py  moon-crater.py
src/: main.py
src/api/v1/: router.py
src/api/v1/endpoints/: chat.py  routes.py
src/controllers/: route_controller.py
src/core/: config.py  graph.py
src/infrastructure/data/: heightmap_loader.py
src/infrastructure/ml/: gnn_landmark.py
src/models/: node.py  schemas.py
src/services/: ai_agent_service.py  crater_detection_service.py  hazard_detection_service.py  route_optimizer_service.py  terrain_service.py
src/utils/: visualizer.py
test/: moon-dl.py.bak  plot_performance.py  test_api.py  test_chat.py  test_crater.py  test_doppler.py
